--- a/celulares.html
+++ b/celulares.html
@@ -5,162 +5,205 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tienda de Celulares y electronicos CelKap</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-   <div class="contenedor">
-	 <header id="header" class="encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p> </header>
-
-             <div id="logo" class="logo encabezado"> <a href="index.html"> <img src="img/logo.png" alt="logo de Celkap"></a></div>
-              <div id="buscar" class="buscar encabezado"> 
-              	<label for="buscar"><h2>Buscar</h2></label> <input type="text" name="buscar" id="buscar" placeholder="que buscas..">
-	          </div>
-             <div id="userImg" class="regCarro encabezado">
-             	<a href="#"> <img src="img/registro.png" alt="Acceder o registrarse"> <h3>Acceder o registrarse</h3></a>
-                <a href="#"><img src="img/carrito.png" alt="Mi carrito"> <h3>Mi carrito</h3></a>
-            </div>
-		     <nav id="mainNav" class="botonera">
-				<ul>
-					<li>
-						<a href="celulares.html">Celulares</a>
-					</li>
-					<li>
-						<a href="laptops.html">Laptops</a>
-					</li>
-					<li>
-						<a href="gadgets.html">Gadgets y Accesorios</a>
-					</li>
-					<li>
-						<a href="contacto.html">Contacto y sucursal</a>
-					</li>
-				</ul>
-		</nav>
-
-    <div id="imagenEncabezado" class="imgPrincipal">
-	<img src="img/promocioncelular.jpg" alt="Promociones celulares" class="imgFluid">
+    <div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
+   <div class="container-fluid p-3">
+   	 <div class="row d-flex align-items-center justify-content-center">
+   	 	<div class="col-lg-8">
+   	 		 <form class="d-flex">
+				 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+				 <button class="btn btn-outline-warning" type="submit">Buscar</button>
+			 </form>
+   	 	</div>
+   	    <div class="col-lg-4 pt-2 regCarro">
+   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse"> <h6>Acceder o registrarse</h6></a>
+           <a href="#"><img src="img/carrito.png" alt="Mi carrito"> <h6>Mi carrito</h6></a>
+       </div>
+      </div>
     </div>
+           <nav class="navbar navbar-expand-lg navbar-light sticky-top py-0 px-0" id="botonera">
+				  <div class="container-fluid">
+				    <a class="navbar-brand logo px-0 py-0" href="index.html">
+				      <img src="img/logo.png" alt="">
+				    </a>
+				    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				      <span class="navbar-toggler-icon"></span>
+				    </button>
+				    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				        <li class="nav-item">
+				           <a class="nav-link active" aria-current="page" href="celulares.html"><h4>Celulares</h4></a>
+				        </li>
+				        <li class="nav-item">
+				           <a class="nav-link active" aria-current="page" href="laptops.html"><h4>Laptops</h4></a>
+				        </li>
+				        <li class="nav-item">
+				           <a class="nav-link active" aria-current="page" href="gadgets.html"><h4>Gadgets</h4></a>
+				        </li>
+				        <li class="nav-item">
+				           <a class="nav-link active" aria-current="page" href="contacto.html"><h4>Contacto</h4></a>
+				        </li>
+				      </ul>
+				    </div>
+				  </div>
+				</nav>
 
-	<main id="productos">
-		<h1>CELULARES</h1>
-	    <section class="masVendidos">			
-			<figure>
-				<img src="img/audifonos2.jpg" alt="Xiaomi Audífonos True Wireless Earbuds">
-				<figcaption>Xiaomi Audífonos twe</figcaption>
-				<p class="price">$452,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-			<figure>
-				<img src="img/phone1.jpg" alt="Poco X3 Pro">
-				<figcaption>Poco X3 Pro</figcaption>
-				<p class="price">$6,989,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band.jpg" alt="Xiaomi Mi Band 6">
-				<figcaption>Xiaomi Mi Band 6</figcaption>
-				<p class="price">$1.990,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band2.jpg" alt="Xiaomi Mi Band 5">
-				<figcaption>Xiaomi Mi Band 5</figcaption>
-				<p class="price">$799,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>	
-			<figure>
-				<img src="img/audifonos2.jpg" alt="Xiaomi Audífonos True Wireless Earbuds">
-				<figcaption>Xiaomi Audífonos twe</figcaption>
-				<p class="price">$452,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-			<figure>
-				<img src="img/phone1.jpg" alt="Poco X3 Pro">
-				<figcaption>Poco X3 Pro</figcaption>
-				<p class="price">$6,989,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band.jpg" alt="Xiaomi Mi Band 6">
-				<figcaption>Xiaomi Mi Band 6</figcaption>
-				<p class="price">$1.990,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band2.jpg" alt="Xiaomi Mi Band 5">
-				<figcaption>Xiaomi Mi Band 5</figcaption>
-				<p class="price">$799,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>	
-			<figure>
-				<img src="img/audifonos2.jpg" alt="Xiaomi Audífonos True Wireless Earbuds">
-				<figcaption>Xiaomi Audífonos twe</figcaption>
-				<p class="price">$452,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-			<figure>
-				<img src="img/phone1.jpg" alt="Poco X3 Pro">
-				<figcaption>Poco X3 Pro</figcaption>
-				<p class="price">$6,989,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band.jpg" alt="Xiaomi Mi Band 6">
-				<figcaption>Xiaomi Mi Band 6</figcaption>
-				<p class="price">$1.990,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>
-
-			<figure>
-				<img src="img/band2.jpg" alt="Xiaomi Mi Band 5">
-				<figcaption>Xiaomi Mi Band 5</figcaption>
-				<p class="price">$799,00</p>
-				<a href="#" class="btn">Añadir al carrito</a>
-			</figure>	
-		</section>		
-	</main>
-
-	<footer id="footer" class="pie">
-       	 <div class="logo" > <a href="index.html"> <img src="img/logo.png" alt="logo de Celkap"></a></div>
-       	   <p>Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
-       	  	<ul>
-				<li><h3>Teléfono atención: 771 475 07 00 </h3></li>
-				<li><h3>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h3></li>
-				<li><h3>Email: info@CelKap.mx</h3></li>
-				<li><h3>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México </h3></li>
-			</ul>      			
-		</footer>
-       <div id="rExtras" class="redesExtras">
-       	 <div class="redes ">
-	       	 <h1>Siguenos en nuestras redes</h1><a href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Seguinos en facebook" class="pieIcono"></a>
-			 <a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="Seguinos en twitter" class="pieIcono"></a>
-		     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram" class="pieIcono"></a>
+    <!-- slider --->
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+		  <div class="carousel-indicators">
+		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		  </div>
-		  <div class="extras ">
-		       <ul>
-		       	   <h1>Condiciones</h1>	       	  
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       </ul>
-		       <ul>
-		       	  <h1>Acerca de nosotros</h1>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       </ul>
-		       <ul>
-		       	   <h1>Preguntas frecuentes</h1>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       	   <li><a href="#">BLABLABLA</a></li>
-		       </ul>
-            </div>  		
-     </div>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img src="img/promocion.jpg" class="d-block w-100" alt="...">
+		    </div>
+		    <div class="carousel-item">
+		      <img src="img/promocionlaptops.jpg" class="d-block w-100" alt="...">
+		    </div>
+		    <div class="carousel-item">
+		      <img src="img/promociongadgets.jpg" class="d-block w-100" alt="...">
+		    </div>
+		  </div>
+		  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="visually-hidden">Anterior</span>
+		  </button>
+		  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="visually-hidden">Siguiente</span>
+		  </button>
+		</div>
+<!-- ends slider -->
+  <div class="container-fluid">
+  	<div class="row" >
+  	   <div class="col-md-3 col-lg-2 d-flex align-items-center justify-content-center">
+  	   	  <nav class=" d-flex align-items-center flex-column justify-content-space-around">
+				<form class="py-2">
+					<select class="custom-select">
+						<option selected>Categorias de Celulares</option>
+						<option value="lg">LG</option>
+						<option value="xiaomi">Xiaomi</option>
+						<option value="poco">Poco</option>
+					</select>
+				</form>
+				  <ul class="list-group py-2">
+					  <li class="list-group-item active">Cras justo odio</li>
+					  <li class="list-group-item">Dapibus ac facilisis in</li>
+					  <li class="list-group-item">Morbi leo risus</li>
+					  <li class="list-group-item">Porta ac consectetur ac</li>
+					  <li class="list-group-item">Vestibulum at eros</li>
+					   <li class="list-group-item">Dapibus ac facilisis in</li>
+					  <li class="list-group-item">Morbi leo risus</li>
+					  <li class="list-group-item">Porta ac consectetur ac</li>
+					  <li class="list-group-item">Vestibulum at eros</li>
+					   <li class="list-group-item">Dapibus ac facilisis in</li>
+					  <li class="list-group-item">Morbi leo risus</li>
+					  <li class="list-group-item">Porta ac consectetur ac</li>
+					  <li class="list-group-item">Vestibulum at eros</li>
+				 </ul>
+					
+			</nav>		
+  	   </div>
+
+  	    <div id="productos" class="col-md-9 col-lg-10 container-fluid m-0 px-0 py-5">
+			<h1>Celulares</h1>
+		    <section class="masVendidos">			
+				<figure class="figure">
+					<img class="figure-img img-fluid rounded" src="img/audifonos2.jpg" alt="Xiaomi Audífonos True Wireless Earbuds">
+					<figcaption class="figure-caption text-right">Xiaomi Audífonos twe</figcaption>
+					<p class="price">$452,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+
+				<figure>
+					<img src="img/phone1.jpg" alt="Poco X3 Pro" >
+					<figcaption>Poco X3 Pro</figcaption>
+					<p class="price">$6,989,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+
+				<figure>
+					<img src="img/band.jpg" alt="Xiaomi Mi Band 6">
+					<figcaption>Xiaomi Mi Band 6</figcaption>
+					<p class="price">$1.990,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+			</section>	
+			<section class="masVendidos">			
+				<figure class="figure">
+					<img class="figure-img img-fluid rounded" src="img/audifonos2.jpg" alt="Xiaomi Audífonos True Wireless Earbuds">
+					<figcaption class="figure-caption text-right">Xiaomi Audífonos twe</figcaption>
+					<p class="price">$452,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+
+				<figure>
+					<img src="img/phone1.jpg" alt="Poco X3 Pro" >
+					<figcaption>Poco X3 Pro</figcaption>
+					<p class="price">$6,989,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+
+				<figure>
+					<img src="img/band.jpg" alt="Xiaomi Mi Band 6">
+					<figcaption>Xiaomi Mi Band 6</figcaption>
+					<p class="price">$1.990,00</p>
+					<a href="#" class="btn">Añadir al carrito</a>
+				</figure>
+			</section>	
+		</div> 
+  	</div>
   </div>
+	
+
+<div class="container-fluid">
+        <div class="row d-flex align-items-center justify-content-space-evenly ">
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
+       	    	   <a href="index.html" class="logo"> <img src="img/logo.png" alt="logo de Celkap"></a>
+		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
+		       	  	<ul>
+						<li><h6>Teléfono atención: 771 475 07 00 </h6></li>
+						<li><h6>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li><h6>Email: info@CelKap.mx</h6></li>
+						<li><h6>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México </h6></li>
+					</ul>      			
+		      </div>
+            <div class="redesExtras col-md-7">
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
+			       	 <h5>Siguenos en nuestras redes</h5>
+			       	 <a href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Seguinos en facebook"></a>
+					 <a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="Seguinos en twitter"></a>
+				     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram"></a>
+				</div>
+		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
+					<div class="list-group px-2">
+		           	   <h5>Acerca de nosotros</h5>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					</div>
+					<div class="list-group px-2">
+		           	   <h5>Preguntas frecuentes</h5>
+					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					</div>
+                </div>  	               	
+            </div>
+        </div>
+    </div>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
 		
