--- a/celulares.html
+++ b/celulares.html
@@ -9,6 +9,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+ <header>
     <div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
    <div class="container-fluid p-3">
    	 <div class="row d-flex align-items-center justify-content-center">
@@ -50,8 +51,9 @@
 				    </div>
 				  </div>
 				</nav>
-
-    <!-- slider --->
+    </header>
+    <body>
+     <!-- slider --->
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		  <div class="carousel-indicators">
 		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -159,8 +161,8 @@
 		</div> 
   	</div>
   </div>
-	
-
+</body>
+<footer>
 <div class="container-fluid">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
        	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
@@ -199,6 +201,7 @@
             </div>
         </div>
     </div>
+ </footer>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/wow.min.js"></script>
     <script>
