--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body >
+ <header>
    <div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
    <div class="container-fluid p-3">
    	 <div class="row d-flex align-items-center justify-content-center">
@@ -50,8 +51,9 @@
 				    </div>
 				  </div>
 				</nav>
-    
+    </header>
     <!-- slider --->
+    <main>
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		  <div class="carousel-indicators">
 		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -111,7 +113,8 @@
 			</figure>
 		</section>	
 	</div>  
-
+  </main>
+  <footer>
     <div class="container-fluid">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
        	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
@@ -150,6 +153,7 @@
             </div>
         </div>
     </div>
+  </footer>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/wow.min.js"></script>
     <script>
