--- a/contacto.html
+++ b/contacto.html
@@ -1,59 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Required meta tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tienda de Celulares y electronicos CelKap</title>
+	<title>Tienda CelKap Contacto para cualquier duda o problema</title>
+	<meta name="description" content="contacto con celkap.com para culaquier duda o problema">
+	<meta name="keywords" content="celulares,laptops,gamer,laptops gamer,
+	electronicos,tienda online,gadgets,envio mexico,ofertas,celkap,xiomi,lg,samsung,poco,apple,drones,camaras web,
+	controles,xbox,playstation">
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<!-- Inicia el header -->
+<header>
   <div class="contenedor">
 	<div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
-   <div class="container-fluid p-3">
+     <div class="container-fluid p-3">
    	 <div class="row d-flex align-items-center justify-content-center">
    	 	<div class="col-lg-8">
    	 		 <form class="d-flex">
 				 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-				 <button class="btn btn-outline-warning" type="submit">Buscar</button>
+				 <button class="btn btn-outline-dark" type="submit">Buscar</button>
 			 </form>
    	 	</div>
    	    <div class="col-lg-4 pt-2 regCarro">
-   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse"> <h6>Acceder o registrarse</h6></a>
-           <a href="#"><img src="img/carrito.png" alt="Mi carrito"> <h6>Mi carrito</h6></a>
+   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse">Acceder o registrarse</a>
+           <a href="#"><img src="img/carrito.png" alt="Mi carrito">Mi carrito</a>
        </div>
       </div>
     </div>
-           <nav class="navbar navbar-expand-lg navbar-light sticky-top py-0 px-0" id="botonera">
-				  <div class="container-fluid">
-				    <a class="navbar-brand logo px-0 py-0" href="index.html">
-				      <img src="img/logo.png" alt="">
+  </header>
+   <!-- Termina el header -->
+   <!-- Inicia el nav-->
+           <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-0 m-0 "id="botonera">
+				  <div class="container-fluid d-flex align-items-center">
+				    <a class="navbar-brand logo  p-0 m-0" href="index.html">
+				      <img class="rounded" src="img/logo.svg" alt="logo de la empresa Celkap">
 				    </a>
 				    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				      <span class="navbar-toggler-icon"></span>
 				    </button>
-				    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				    <div class="collapse navbar-collapse pb-0" id="navbarSupportedContent">
 				      <ul class="navbar-nav ms-auto mb-2  mb-lg-0">
-				        <li class="nav-item ">
-				           <a class="nav-link active p-3" aria-current="page" href="celulares.html"><h4>Celulares</h4></a>
+				        <li class="nav-item  ">
+				           <a class="nav-link active p-3 " aria-current="page" href="celulares.html">Celulares</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="laptops.html"><h4>Laptops</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="laptops.html">Laptops</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="gadgets.html"><h4>Gadgets</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="gadgets.html">Gadgets</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="contacto.html"><h4>Contacto</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="contacto.html">Contacto</a>
 				        </li>
 				      </ul>
 				    </div>
 				  </div>
 				</nav>
-  
-        <div class="container-fluid d-flex align-items-center justify-content-center py-5 ">
-           <div class="row" >
+	<!-- Termina el nav-->
+   <!-- Inicia el main -->
+   <main>  
+        <div class="container-fluid d-flex align-items-center justify-content-center py-5  ">
+           <div class="row rounded p-3 m-2" id="formContainer">
         	 <h1>Contacto</h1>
 			 <form method="post" action="#" >
 			 	<div class="form-group py-2 px-2">
@@ -74,22 +87,29 @@
 			    </div>
 			    <div class="form-group">
 			        <label for="subject">Asunto</label>		      
-			        <textarea id="subject" name="subject" placeholder="Asunto....." style="height:100px" class="form-control"></textarea>
+			        <textarea id="subject" name="subject" placeholder="Asunto....." style=" " class="form-control"></textarea>
 			    </div>
-			           <input  type="submit"  value="Enviar">
+			        <div class="d-flex align-items-center justify-content-center py-3">
+			        	 <input class="btn btn-dark " type="submit"  value="Enviar">
+			        </div>
+			          
 			  </form>
 		  </div>
 	    </div>
+   </main> 
+   <!-- Termina el main -->
+<!-- Inicia el footer -->
+   <footer>
    <div class="container-fluid">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
        	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="index.html" class="logo"> <img src="img/logo.png" alt="logo de Celkap"></a>
+       	    	   <a href="index.html" class="logo"> <img src="img/logo.svg" alt="logo de la empresa Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
-						<li><h6>Teléfono atención: 771 475 07 00 </h6></li>
-						<li><h6>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
-						<li><h6>Email: info@CelKap.mx</h6></li>
-						<li><h6>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México </h6></li>
+						<li>Teléfono atención: 771 475 07 00</li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
+						<li>Email: info@CelKap.mx</h6></li>
+						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
@@ -100,24 +120,25 @@
 				     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram"></a>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
-					<div class="list-group px-2">
-		           	   <h5>Acerca de nosotros</h5>
-					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					<div class="list-group px-2 list-group-flush">
+		           	   <h5>Quienes somos</h5>
+					  <a href="detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
-					<div class="list-group px-2">
-		           	   <h5>Preguntas frecuentes</h5>
-					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					<div class="list-group  px-2 list-group-flush">
+		           	   <h5>Centro de ayuda</h5>
+					  <a href="detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
         </div>
     </div>
+ </footer>
+ <!-- Termina el footer -->
+ <!-- scripts -->
    <script src="js/bootstrap.min.js"></script>
    <script src="js/wow.min.js"></script>
     <script>
