--- a/gadgets.html
+++ b/gadgets.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Required meta tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tienda de Celulares y electronicos CelKap</title>
+	<title>Tienda CelKap Gadgets y electronicos con envios toda la republica mexicana</title>
+	<meta name="description" content="Bands,drones,webcams y demas de muchas marcas a lo mejores precios">
+	<meta name="keywords" content="celulares,laptops,gamer,laptops gamer,
+	electronicos,tienda online,gadgets,envio mexico,ofertas,celkap,xiomi,lg,samsung,poco,apple,drones,camaras web,
+	controles,xbox,playstation">
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<!-- Inicia el header -->
   <header>
 	<div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
    <div class="container-fluid p-3">
@@ -16,72 +23,52 @@
    	 	<div class="col-lg-8">
    	 		 <form class="d-flex">
 				 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-				 <button class="btn btn-outline-warning" type="submit">Buscar</button>
+				 <button class="btn btn-outline-dark" type="submit">Buscar</button>
 			 </form>
    	 	</div>
    	    <div class="col-lg-4 pt-2 regCarro">
-   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse"> <h6>Acceder o registrarse</h6></a>
-           <a href="#"><img src="img/carrito.png" alt="Mi carrito"> <h6>Mi carrito</h6></a>
+   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse">Acceder o registrarse</a>
+           <a href="#"><img src="img/carrito.png" alt="Mi carrito">Mi carrito</a>
        </div>
       </div>
     </div>
   </header>
-           <nav class="navbar navbar-expand-lg navbar-light sticky-top py-0 px-0" id="botonera">
-				  <div class="container-fluid">
-				    <a class="navbar-brand logo px-0 py-0" href="index.html">
-				      <img src="img/logo.png" alt="">
+  <!-- Termina el header -->
+ 	<!-- Inicia el nav --->
+            <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-0 m-0 "id="botonera">
+				  <div class="container-fluid d-flex align-items-center">
+				    <a class="navbar-brand logo  p-0 m-0" href="index.html">
+				      <img class="rounded" src="img/logo.svg" alt="Logo de la empresa Celkap">
 				    </a>
 				    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				      <span class="navbar-toggler-icon"></span>
 				    </button>
-				    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+				    <div class="collapse navbar-collapse pb-0" id="navbarSupportedContent">
 				      <ul class="navbar-nav ms-auto mb-2  mb-lg-0">
-				        <li class="nav-item ">
-				           <a class="nav-link active p-3" aria-current="page" href="celulares.html"><h4>Celulares</h4></a>
+				        <li class="nav-item  ">
+				           <a class="nav-link active p-3 " aria-current="page" href="celulares.html">Celulares</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="laptops.html"><h4>Laptops</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="laptops.html">Laptops</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="gadgets.html"><h4>Gadgets</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="gadgets.html">Gadgets</a>
 				        </li>
 				        <li class="nav-item">
-				           <a class="nav-link active p-3" aria-current="page" href="contacto.html"><h4>Contacto</h4></a>
+				           <a class="nav-link active p-3" aria-current="page" href="contacto.html">Contacto</a>
 				        </li>
 				      </ul>
 				    </div>
 				  </div>
 				</nav>
+	<!-- Termina el nav -->
+   <!-- Inicia el main -->
   <main>
-    <!-- slider --->
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-		  <div class="carousel-indicators">
-		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		  </div>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="img/promocion.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/promocionlaptops.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/promociongadgets.jpg" class="d-block w-100" alt="...">
-		    </div>
-		  </div>
-		  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Anterior</span>
-		  </button>
-		  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Siguiente</span>
-		  </button>
-		</div>
-<!-- ends slider -->
+    <!-- banner --->
+		 <img src="img/gadgets.png" class="d-block w-100" alt="Banner de la pagina de gadgets">
+		 
   <div class="container-fluid">
+  <!-- Inicia el side bar -->	
   	<div class="row" >
   	   <div class="col-md-3 col-lg-2 d-flex align-items-center justify-content-center">
   	   	  <nav class=" d-flex align-items-center flex-column justify-content-space-around">
@@ -111,7 +98,8 @@
 					
 			</nav>		
   	   </div>
-
+         <!-- Termina el sidebar -->	
+        <!-- Inician los productos -->	
   	    <div id="productos" class="col-md-9 col-lg-10 container-fluid m-0 px-0 py-5">
 			<h1>Gadgets</h1>
 		    <section class="masVendidos">			
@@ -161,18 +149,21 @@
 		</div> 
   	</div>
   </div>
+   <!-- Terminan los productos-->
 </main>	
+<!-- Termina el main -->
+<!-- Inicia el footer -->
 <footer>
 <div class="container-fluid">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
        	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="index.html" class="logo"> <img src="img/logo.png" alt="logo de Celkap"></a>
+       	    	   <a href="index.html" class="logo"> <img src="img/logo.svg" alt="logo de la empresa Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
-						<li><h6>Teléfono atención: 771 475 07 00 </h6></li>
-						<li><h6>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
-						<li><h6>Email: info@CelKap.mx</h6></li>
-						<li><h6>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México </h6></li>
+						<li>Teléfono atención: 771 475 07 00 </li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Email: info@CelKap.mx</li>
+						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
@@ -183,25 +174,25 @@
 				     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram"></a>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
-					<div class="list-group px-2">
-		           	   <h5>Acerca de nosotros</h5>
-					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					<div class="list-group px-2 list-group-flush">
+		           	   <h5>Quienes somos</h5>
+					  <a href="detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
-					<div class="list-group px-2">
-		           	   <h5>Preguntas frecuentes</h5>
-					  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-					  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-					  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-					  <a href="#" class="list-group-item list-group-item-action">Vestibulum at eros</a>
+					<div class="list-group  px-2 list-group-flush">
+		           	   <h5>Centro de ayuda</h5>
+					  <a href="detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
         </div>
     </div>
  </footer>
+   <!-- Termina el footer -->
+ <!-- scripts -->
    <script src="js/bootstrap.min.js"></script>
    <script src="js/wow.min.js"></script>
     <script>
