añadido de corecciones

--- a/celulares.html
+++ b/celulares.html
@@ -74,25 +74,21 @@
 				<form class="py-2">
 					<select class="custom-select">
 						<option selected>Categorias de Celulares</option>
-						<option value="lg">LG</option>
-						<option value="xiaomi">Xiaomi</option>
-						<option value="poco">Poco</option>
+						<option value="lg">Marcas</option>
+						<option value="xiaomi">Precio</option>
+						<option value="poco">RAM</option>
 					</select>
 				</form>
 				  <ul class="list-group py-2">
-					  <li class="list-group-item active">Cras justo odio</li>
-					  <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
+					   <li class="list-group-item">LG</li>
+					  <li class="list-group-item">Samsung</li>
+					  <li class="list-group-item">Xiomi</li>
+					  <li class="list-group-item">Poco</li>
+					  <li class="list-group-item">Apple</li>
+					   <li class="list-group-item">Motorola</li>
+					  <li class="list-group-item">Google</li>
+					  <li class="list-group-item">Nokia</li>
+					  <li class="list-group-item">Blackberry</li>
 				 </ul>
 			</nav>		
   	   </div>
