--- a/gadgets.html
+++ b/gadgets.html
@@ -75,25 +75,19 @@
 				<form class="py-2">
 					<select class="custom-select">
 						<option selected>Categorias de Gadgets</option>
-						<option value="lg">LG</option>
-						<option value="xiaomi">Xiaomi</option>
-						<option value="poco">Poco</option>
+						<option value="marcas">Tipo</option>
+						<option value="marcas">Marcas</option>
+						<option value="precios">Precios</option>
 					</select>
 				</form>
 				  <ul class="list-group py-2">
-					  <li class="list-group-item active">Cras justo odio</li>
-					  <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
+					  <li class="list-group-item">Bands</li>
+					  <li class="list-group-item">Drones</li>
+					  <li class="list-group-item">Lamparas</li>
+					  <li class="list-group-item">Cargadores</li>
+					  <li class="list-group-item">Powebanks</li>
+					   <li class="list-group-item">Ventiladores</li>
+					  <li class="list-group-item">Audifonos</li>				
 				 </ul>
 					
 			</nav>		
