--- a/laptops.html
+++ b/laptops.html
@@ -76,25 +76,20 @@
 				<form class="py-2">
 					<select class="custom-select">
 						<option selected>Categorias de Laptops</option>
-						<option value="lg">LG</option>
-						<option value="xiaomi">HP</option>
-						<option value="poco">Samsung</option>
+						<option value="marcas">Marcas</option>
+						<option value="precios">Precios</option>
 					</select>
 				</form>
 				  <ul class="list-group py-2">
-					  <li class="list-group-item active">Cras justo odio</li>
-					  <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
-					   <li class="list-group-item">Dapibus ac facilisis in</li>
-					  <li class="list-group-item">Morbi leo risus</li>
-					  <li class="list-group-item">Porta ac consectetur ac</li>
-					  <li class="list-group-item">Vestibulum at eros</li>
+					  <li class="list-group-item">LG</li>
+					  <li class="list-group-item">Samsung</li>
+					  <li class="list-group-item">Vaio</li>
+					  <li class="list-group-item">Lenovo</li>
+					  <li class="list-group-item">Mac</li>
+					   <li class="list-group-item">Hp</li>
+					  <li class="list-group-item">Google</li>
+					  <li class="list-group-item">Gamer</li>
+					  <li class="list-group-item">Alienware</li>
 				 </ul>
 					
 			</nav>		
